--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ extra_js:
 ---
 
 <div class="sideNav">
-    <div class="sideNav-button active">
+    <div class="sideNav-button button-home">
         <span class="glyphicon glyphicon-home"></span>
     </div>
-    <div class="sideNav-button">
+    <div class="sideNav-button button-about">
         <span class="glyphicon glyphicon-user"></span>
     </div>
 </div>
