Added Projects page. Added URL change with page change.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ extra_js:
     <div class="sideNav-button button-about">
         <span class="glyphicon glyphicon-user"></span>
     </div>
+    <div class="sideNav-button button-projects">
+        <span class="glyphicon glyphicon-th-large"></span>
+    </div>
 </div>
 
 <div class="scrollSnap-container">
@@ -26,5 +29,7 @@ extra_js:
     {% include pages/home.html %}
 
     {% include pages/about.html %}
+
+    {% include pages/projects.html %}
 
 </div>
