Added canvas for active background to projects page. scrollSnap event updates.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ extra_js:
     - /scripts/external/jquery-ui.min.js
     - /scripts/scrollSnap.js
     - /scripts/sideNav.js
+    - /scripts/projectsBackground.js
     - /scripts/index.js
 ---
 
