Added homepage background and canvas. Style updates.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ extra_js:
     - /scripts/external/jquery-ui.min.js
     - /scripts/scrollSnap.js
     - /scripts/sideNav.js
-    - /scripts/projectsBackground.js
+    - /scripts/projectsCanvas.js
+    - /scripts/homeCanvas.js
     - /scripts/index.js
 ---
 
