Started rotating gradient for index background

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
             <h2>Welcome to my personal website</h2>
         </section>
     </div>
+    <canvas id="background-animation"></canvas>
+    <script src='javascript/index.js'></script>
 </body>
 </html>
